--- a/src/app.pcss
+++ b/src/app.pcss
@@ -2,3 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	html {
+		scroll-behavior: smooth;
+	}
+
+	body {
+		font-family: 'Inter', sans-serif;
+		font-size: 16px;
+		line-height: 1.5;
+		color: #333;
+	}
+}
